# android_llvm

./: .gitignore  Android.bp  Android.mk  OWNERS  android  llvm-gen-attributes.mk  llvm-host-build.mk  llvm-tblgen-rules.mk  shared_llvm.mk
android/: android_version.py  build.py  compiler_wrapper.py  merge_from_upstream.py  test_compiler.py  update-prebuilts.py  utils.py  version.py
docs/: BitCodeFormat.rst  LangRef.rst
include/llvm/: InitializePasses.h  LinkAllPasses.h
lib/Analysis/: Android.bp  MemorySSA.cpp
lib/AsmParser/: Android.bp  LLLexer.cpp  LLParser.cpp  LLToken.h
lib/CodeGen/: Android.bp  Android.mk  CMakeLists.txt  CodeGen.cpp  CodeGenPrepare.cpp  GlobalMerge.cpp  LiveDebugValues.cpp  LocalStackSlotAllocation.cpp  MIRPrinter.cpp  MachineBasicBlock.cpp  MachineFunction.cpp  MachineInstr.cpp  MachineOperand.cpp  PagerandoBinning.cpp  PrologEpilogInserter.cpp  PseudoSourceValue.cpp  SafeStack.cpp  StackColoring.cpp  StackProtector.cpp  TargetLoweringBase.cpp  TargetLoweringObjectFileImpl.cpp  TargetPassConfig.cpp
lib/ExecutionEngine/: Android.bp
lib/Fuzzer/: Android.bp
lib/IR/: Android.bp  Android.mk  Attributes.cpp  Verifier.cpp
lib/IRReader/: Android.bp
lib/LTO/: Android.bp  Android.mk  LTO.cpp  LTOBackend.cpp  ThinLTOCodeGenerator.cpp
lib/LibDriver/: Android.bp
projects/: compiler-rt  libcxx  libcxxabi  openmp
soong/: llvm.go  tblgen.go
test/: lit.site.cfg
tools/: lld
unittests/CodeGen/: CMakeLists.txt  PagerandoBinningCallGraphTest.cpp  PagerandoBinningFirstFitTest.cpp  PagerandoBinningSimpleTest.cpp  PagerandoBinningTest.cpp
(+193 files in other folders)
